--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -11,38 +11,120 @@
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import os\n",
+    "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
     "\n",
-    "def cm_to_inch(value):\n",
+    "def cm2inch(value):\n",
     "    return value/2.54\n",
-    "\n",
-    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
-    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "plt.rcParams['xtick.labelsize'] = 6\n",
+    "plt.rcParams['ytick.labelsize'] = 6\n",
+    "plt.rcParams['legend.fontsize'] =6\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "config = {\n",
+    "    \"text.usetex\": False,\n",
+    "    \"font.family\":'serif',\n",
+    "    # \"font.family\":'stix',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    # \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\oritest1\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "import numpy \n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.2,1.0005],\n",
+    "                             handlelength=0.0,\n",
+    "                             handleheight=0.0,\n",
+    "                             handletextpad=0.0,\n",
+    "                             borderaxespad=0.0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def sciforyax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
+    "def sciforxax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.xaxis.set_major_formatter(formatter)\n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-1,1))\n",
+    "\n",
+    "import matplotlib.ticker\n",
+    "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
+    "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
+    "        self.oom = order\n",
+    "        self.fformat = fformat\n",
+    "        matplotlib.ticker.ScalarFormatter.__init__(self,useOffset=offset,useMathText=mathText)\n",
+    "    def _set_order_of_magnitude(self):\n",
+    "        self.orderOfMagnitude = self.oom\n",
+    "    def _set_format(self, vmin=None, vmax=None):\n",
+    "        self.format = self.fformat\n",
+    "        if self._useMathText:\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
+    "\n",
+    "levels=100\n",
+    "figureDPI=1200\n",
+    "figureType=\"jpeg\"\n",
+    "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dir='D:\\\\doc\\\\data\\\\ori\\\\test2\\\\'\n",
+    "# dir='D:\\\\dataofpro\\\\'\n",
+    "dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -65,7 +147,28 @@
    "source": [
     "TimeBegin = -2500\n",
     "TimeEnd =7500\n",
-    "TimeTurn =7500"
+    "TimeTurn =7500\n",
+    "print('Begin time= ' + str(TimeBegin)+ ' fs')\n",
+    "print('End time= ' + str(TimeEnd)+ ' fs')\n",
+    "\n",
+    "for i in range(0, 3):\n",
+    "    yn=input(\"Whether to adjust the range of time:(yes:1/no:0): \")\n",
+    "    if(str.isnumeric(yn)):\n",
+    "        yn=int(yn)\n",
+    "        if(yn==1):\n",
+    "            begtim=input(\"Input the begin time: \")\n",
+    "            endtime=input(\"Input the end time: \")\n",
+    "            TimeBegin=int(begtim)\n",
+    "            TimeEnd=int(endtime)\n",
+    "            break\n",
+    "        elif(yn==0):\n",
+    "            print('The range of time would change.')\n",
+    "            break\n",
+    "    else:\n",
+    "        print('Input 1 or 0 to choose. '+str(i+1)+'/3')\n",
+    "        \n",
+    "print('Begin time= ' + str(TimeBegin)+ ' fs')\n",
+    "print('End time= ' + str(TimeEnd)+ ' fs')"
    ]
   },
   {
@@ -74,12 +177,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataAng =np.loadtxt(dir+\"wave0.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "data =np.loadtxt(dir+\"wave0.dat\")\n",
+    "#data=scipy.ndimage.zoom(data,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.xlim(-5, 5)\n",
     "plt.ylim(-5, 5)\n",
     "plt.title('(a)',loc='left')\n",
@@ -112,18 +215,18 @@
     "fig, ax1 = plt.subplots()\n",
     "\n",
     "color = 'tab:red'\n",
-    "ax1.set_xlabel('$\\\\textit{R}$ (a.u.)')\n",
-    "ax1.set_ylabel(\"Intensity (a.u.)\", color=color)\n",
+    "ax1.set_xlabel('$R$ (a.u.)')\n",
+    "ax1.set_ylabel(\"Intensity (D)\", color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "plt.legend(['$X^1\\Sigma^+$'],loc='lower left')\n",
+    "plt.legend(['$X^1\\Sigma^+$'],loc=0)\n",
     "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
     "\n",
     "color = 'tab:blue'\n",
     "ax2.set_ylabel(\"Intensity (a.u.)\", color=color)  # we already handled the x-label with ax1\n",
     "ax2.plot(x, y2,'--', color=color)\n",
     "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "plt.legend(['$X^1\\Sigma^+$--$X^1 \\Sigma ^+$'],loc='upper right')\n",
+    "plt.legend(['$X^1\\Sigma^+$--$X^1 \\Sigma ^+$'],loc=0)\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "plt.savefig(dir+\"PotAndDip.jpeg\",bbox_inches = 'tight',dpi=600)\n",
     "plt.show()"
@@ -140,14 +243,18 @@
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
+    "y4=data[:,4]\n",
+    "ax=plt.gca()\n",
     "#plt.grid(False)\n",
     "plt.xlabel('Time (fs)')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Intensity (V/m)\")\n",
     "plt.xlim(TimeBegin, TimeEnd)\n",
-    "plt.plot(x,y1,'k-')#,x,y2,'r-')\n",
+    "sciforyax(ax)\n",
+    "plt.plot(x,y1,'k-')#,x,y2,'b--',x,y4,'r-.')#,x,y2,'r-')\n",
     "#plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# os.startfile(dir+\"LaserFiled.jpeg\")"
    ]
   },
   {
@@ -159,36 +266,36 @@
     "\n",
     "import scipy.ndimage\n",
     "plt.figure(figsize=(12,10))\n",
-    "plt.subplot(2,2,1)\n",
-    "DataAng =np.loadtxt(dir+\"wave0.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "ax=plt.subplot(2,2,1)\n",
+    "data =np.loadtxt(dir+\"wave0.dat\")\n",
+    "#data=scipy.ndimage.zoom(data,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.xlim(-5, 5)\n",
     "plt.ylim(-5, 5)\n",
-    "plt.title('(a)',loc='left')\n",
-    "ax=plt.tricontourf(x,y,z)\n",
+    "setlabel(ax,\"(a)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "#interpolation='spline16'\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=cbformat)\n",
     "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
     "plt.ylabel(\"$\\tR$ (a.u.)\")\n",
-    "plt.subplot(2,2,2)\n",
-    "DataAng =np.loadtxt(dir+\"waveend.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "ax=plt.subplot(2,2,2)\n",
+    "setlabel(ax,\"(b)\")\n",
+    "data =np.loadtxt(dir+\"waveend.dat\")\n",
+    "#data=scipy.ndimage.zoom(data,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "plt.xlim(-5, 5)\n",
     "plt.ylim(-5, 5)\n",
-    "plt.title('(b)',loc='left')\n",
-    "ax=plt.tricontourf(x,y,z)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "#interpolation='spline16'\n",
-    "plt.colorbar()\n",
-    "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
-    "plt.ylabel(\"$\\tR$ (a.u.)\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"$R$ (a.u.)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
     "\n",
     "plt.savefig(dir+\"InitialWavePacket.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
@@ -223,7 +330,8 @@
     "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
     "plt.savefig(dir+\"AlignmentAndOrientation.jpeg\",bbox_inches = 'tight',dpi=600)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# os.startfile(dir+\"AlignmentAndOrientation.jpeg\")"
    ]
   },
   {
@@ -232,34 +340,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12,9))\n",
-    "plt.subplot(2,2,1)\n",
-    "DataAng =np.loadtxt(dir+\"tap.dat\")\n",
+    "plt.figure(figsize=(8*2/2.54,6.5/2.54))\n",
+    "ax=plt.subplot(1,2,1)\n",
+    "# setlabel(ax,\"(a)\")\n",
+    "data =np.loadtxt(dir+\"tap.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
     "levels=np.linspace(z.min(), z.max(), 50)\n",
-    "plt.title(\"(a)\",loc='left')\n",
+    "\n",
     "plt.xlim(TimeBegin, TimeEnd )\n",
-    "plt.tricontourf(x,y,z)\n",
-    "plt.colorbar()\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$\\\\theta$ (Degrees)\")\n",
-    "plt.subplot(2,2,2)\n",
-    "DataAng =np.loadtxt(dir+\"trp.dat\")\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataAng[:,0]\n",
-    "y=DataAng[:,1]\n",
-    "z=DataAng[:,2]\n",
-    "levels=np.linspace(z.min(), z.max(), 50)\n",
-    "plt.title(\"(b)\",loc='left')\n",
-    "plt.xlim(TimeBegin+5, TimeEnd-5 )\n",
-    "plt.tricontourf(x,y,z)\n",
-    "plt.colorbar()\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\tR$ (a.u.)\")\n",
-    "plt.savefig(dir+\"WaveDis.png\",bbox_inches = 'tight',dpi=600)\n",
+    "# plt.subplot(1,2,2)\n",
+    "# data =np.loadtxt(dir+\"trp.dat\")\n",
+    "# #plt.style.use('_mpl-gallery-nogrid')\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# setlabel(ax,\"(b)\")\n",
+    "# plt.xlim(TimeBegin+5, TimeEnd-5 )\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(format=cbformat)\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"$\\tR$ (a.u.)\")\n",
+    "# plt.ylim(1.75,4.5)\n",
+    "plt.savefig(dir+\"WaveDis.\"+figureType,bbox_inches = 'tight',dpi=600)\n",
     "plt.show()"
    ]
   },
@@ -291,7 +400,7 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Population\")\n",
     "plt.legend(['$| 0,0 \\\\rangle$','$| 0,1 \\\\rangle$','$| 0,2 \\\\rangle$','$| 0,3 \\\\rangle$','$| 0,4 \\\\rangle$','$| 0,5 \\\\rangle$'])\n",
-    "plt.savefig(dir+\"popu.svg\",dpi=600,bbox_inches=\"tight\")"
+    "plt.savefig(dir+\"popuveq0.\"+figureType,dpi=600,bbox_inches=\"tight\")"
    ]
   },
   {
@@ -307,15 +416,8 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"Population\")\n",
     "plt.legend(['$| 1,0 \\\\rangle$','$| 1,1 \\\\rangle$','$| 1,2 \\\\rangle$','$| 1,3 \\\\rangle$','$|1,4 \\\\rangle$','$| 1,5 \\\\rangle$'])\n",
-    "plt.savefig(dir+\"popu.jpeg\",dpi=600,bbox_inches=\"tight\")"
+    "plt.savefig(dir+\"popuveq1.jpeg\",dpi=600,bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
