--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -106,15 +106,45 @@
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
     "    line.remove()\n",
-    "def sciformat(ax):\n",
+    "def sciforyax(ax):\n",
     "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
     "    formatter.set_scientific(True)\n",
     "    formatter.set_powerlimits((0,0))\n",
     "    ax.yaxis.set_major_formatter(formatter)\n",
+    "def sciforxax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.xaxis.set_major_formatter(formatter)\n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-2,2))\n",
+    "\n",
+    "import matplotlib.ticker\n",
+    "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
+    "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
+    "        self.oom = order\n",
+    "        self.fformat = fformat\n",
+    "        matplotlib.ticker.ScalarFormatter.__init__(self,useOffset=offset,useMathText=mathText)\n",
+    "    def _set_order_of_magnitude(self):\n",
+    "        self.orderOfMagnitude = self.oom\n",
+    "    def _set_format(self, vmin=None, vmax=None):\n",
+    "        self.format = self.fformat\n",
+    "        if self._useMathText:\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\"\n",
+    "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
@@ -131,7 +161,7 @@
    "source": [
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
-    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "plt.title(\"Electrical field\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
@@ -146,14 +176,14 @@
     "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
     "# plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
     "\n",
     "ax=plt.axes([0.1,0.55,0.35,0.35])\n",
     "plt.plot(x1,y,'r--')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "plt.title(\"Enevlope\")\n",
@@ -166,7 +196,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(y,x,'k-')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
     "\n",
@@ -182,7 +212,7 @@
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
@@ -197,7 +227,7 @@
    "source": [
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
-    "plt.figure(figsize=(cm_to_inch(8*3),cm_to_inch(6.5)))\n",
+    "plt.figure(figsize=((8*3/2.54),(6.5/2.54)))\n",
     "ax=plt.subplot(1,3,1)\n",
     "setlabel(ax,\"(a)\")\n",
     "plt.title(\"Electrical field\")\n",
@@ -210,7 +240,7 @@
     "y=data[:,4]\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
     "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
@@ -230,12 +260,12 @@
     "plt.plot(y,x,'k-')\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "\n",
     "ax=plt.subplot(1,3,2)\n",
     "setlabel(ax,\"(b)\")\n",
     "plt.title(\"Spectrum\")\n",
-    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
@@ -244,7 +274,7 @@
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciforyax(ax)\n",
     "\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
@@ -257,6 +287,174 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8/2.54,6.5*3/2.54))\n",
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "#####plt.title(\"(a)\",titleLoc)\n",
+    "ax=plt.subplot(3,1,1)\n",
+    "plt.plot(x1,y1,'k-')\n",
+    "setlabel(ax,\"(a)\")\n",
+    "sciforyax(ax)\n",
+    "ax=plt.subplot(3,1,2)\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "setlabel(ax,\"(b)\")\n",
+    "plt.plot(x1,y2)\n",
+    "sciforyax(ax)\n",
+    "ax=plt.subplot(3,1,3)\n",
+    "plt.plot(x1,y3)\n",
+    "setlabel(ax,\"(c)\")\n",
+    "sciforyax(ax)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.subplots_adjust(bottom=0.1,\n",
+    "                    left=0.1,\n",
+    "                    wspace=0.3,\n",
+    "                    hspace=0.2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists(dir+'FreDis1.dat'):\n",
+    "    titleLoc=\"left\"\n",
+    "    plt.figure(figsize=(12,9))\n",
+    "    data=np.loadtxt(dir+\"laser.dat\")\n",
+    "    x1=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    ax=plt.subplot(3,3,1)\n",
+    "    #####plt.title(\"(a)\",titleLoc)\n",
+    "    plt.plot(x1,y1,'k-')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "    #plt.xlim(19,21)\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,2)\n",
+    "    ###plt.title(\"(b)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'k-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,3)\n",
+    "    ##plt.title(\"(c)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Frequency (a.u.)\")\n",
+    "    ax=plt.subplot(3,3,4)\n",
+    "    ##plt.title(\"(d)\",titleLoc)\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.plot(x1,y2,'r-')\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,5)\n",
+    "    #plt.title(\"(e)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis2.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'r-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (a.u.)\")\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,6)\n",
+    "    ##plt.title(\"(f)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Frequency (a.u.)\")\n",
+    "    plt.colorbar()\n",
+    "    ax=plt.subplot(3,3,7)\n",
+    "    ##plt.title(\"(g)\",titleLoc)\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")\n",
+    "    plt.plot(x1,y3,'b-')\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,8)\n",
+    "    ##plt.title(\"(h)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"FreDis3.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    plt.plot(x,y,'b-')\n",
+    "    plt.xlabel(\"Frequency (a.u.)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
+    "    sciforyax(ax)\n",
+    "    ax=plt.subplot(3,3,9)\n",
+    "    #plt.title(\"(i)\",titleLoc)\n",
+    "    data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "    plt.xlabel(\"Time(fs)\")\n",
+    "    plt.ylabel(\"Frequency (a.u.)\")\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    plt.subplots_adjust(left=0.125,\n",
+    "                        bottom=0.1, \n",
+    "                        right=0.9, \n",
+    "                        top=0.9, \n",
+    "                        wspace=0.3, \n",
+    "                        hspace=0.3)\n",
+    "    plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)\n",
+    "    os.startfile(dir+\"LaserTimFreDis.\"+figureType)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.savefig(dir+\"TimFreDistTotal.\"+figureType,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as ticker\n",
+    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
+    "ax=plt.subplot()\n",
+    "\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y,'k-')\n",
+    "\n",
     "import matplotlib.gridspec as gridspec\n",
     "fig = plt.figure(tight_layout=True)\n",
     "plt.figure(figsize=(8*5/2.54,6.5*5/2.54))\n",
@@ -280,7 +478,7 @@
     "        plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "        plt.xlim(-20,20)\n",
     "        plt.ylim(0.07,0.165)\n",
-    "        plt.colorbar()\n",
+    "        plt.colorbar(format=cbformat)\n",
     "        plt.xlabel(\"Time(fs)\")\n",
     "        plt.ylabel(\"Instensity (a.u.)\")\n",
     "plt.subplots_adjust(left=0.1,\n",
@@ -323,171 +521,8 @@
     "# ax=plt.subplot(gs[3,0])\n",
     "# ax=plt.subplot(gs[3,1])\n",
     "# ax=plt.subplot(gs[3,2])\n",
-    "# ax=plt.subplot(gs[3,3])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(8/2.54,6.5*3/2.54))\n",
-    "data=np.loadtxt(dir+\"laser.dat\")\n",
-    "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
-    "#####plt.title(\"(a)\",titleLoc)\n",
-    "ax=plt.subplot(3,1,1)\n",
-    "plt.plot(x1,y1,'k-')\n",
-    "setlabel(ax,\"(a)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "ax=plt.subplot(3,1,2)\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
-    "setlabel(ax,\"(b)\")\n",
-    "plt.plot(x1,y2)\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "ax=plt.subplot(3,1,3)\n",
-    "plt.plot(x1,y3)\n",
-    "setlabel(ax,\"(c)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.subplots_adjust(bottom=0.1,\n",
-    "                    left=0.1,\n",
-    "                    wspace=0.3,\n",
-    "                    hspace=0.2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.path.exists(dir+'FreDis1.dat'):\n",
-    "    titleLoc=\"left\"\n",
-    "    plt.figure(figsize=(12,9))\n",
-    "    data=np.loadtxt(dir+\"laser.dat\")\n",
-    "    x1=data[:,0]\n",
-    "    y1=data[:,1]\n",
-    "    y2=data[:,2]\n",
-    "    y3=data[:,3]\n",
-    "    plt.subplot(3,3,1)\n",
-    "    #####plt.title(\"(a)\",titleLoc)\n",
-    "    plt.plot(x1,y1,'k-')\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
-    "    #plt.xlim(19,21)\n",
+    "# ax=plt.subplot(gs[3,3])\n",
     "\n",
-    "    plt.subplot(3,3,2)\n",
-    "    ###plt.title(\"(b)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"FreDis1.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    plt.plot(x,y,'k-')\n",
-    "    plt.xlabel(\"Frequency (a.u.)\")\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.subplot(3,3,3)\n",
-    "    ##plt.title(\"(c)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    z=data[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Instensity (a.u.)\")\n",
-    "    plt.subplot(3,3,4)\n",
-    "    ##plt.title(\"(d)\",titleLoc)\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Instensity (a.u.)\")\n",
-    "    plt.plot(x1,y2,'r-')\n",
-    "\n",
-    "    plt.subplot(3,3,5)\n",
-    "    #plt.title(\"(e)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"FreDis2.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    plt.plot(x,y,'r-')\n",
-    "    plt.xlabel(\"Frequency (a.u.)\")\n",
-    "    plt.ylabel(\"Intensity (a.u.)\")\n",
-    "    plt.subplot(3,3,6)\n",
-    "    ##plt.title(\"(f)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"TimFreDis2.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    z=data[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.colorbar()\n",
-    "    plt.subplot(3,3,7)\n",
-    "    ##plt.title(\"(g)\",titleLoc)\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Instensity (a.u.)\")\n",
-    "    plt.plot(x1,y3,'b-')\n",
-    "\n",
-    "    plt.subplot(3,3,8)\n",
-    "    ##plt.title(\"(h)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"FreDis3.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    plt.plot(x,y,'b-')\n",
-    "    plt.xlabel(\"Frequency (a.u.)\")\n",
-    "    plt.ylabel(\"Intensity (arb.units)\")\n",
-    "    plt.subplot(3,3,9)\n",
-    "    #plt.title(\"(i)\",titleLoc)\n",
-    "    data=np.loadtxt(dir+\"TimFreDis3.dat\")\n",
-    "    x=data[:,0]\n",
-    "    y=data[:,1]\n",
-    "    z=data[:,2]\n",
-    "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.xlabel(\"Time(fs)\")\n",
-    "    plt.ylabel(\"Instensity (a.u.)\")\n",
-    "    plt.colorbar()\n",
-    "    plt.subplots_adjust(left=0.125,\n",
-    "                        bottom=0.1, \n",
-    "                        right=0.9, \n",
-    "                        top=0.9, \n",
-    "                        wspace=0.3, \n",
-    "                        hspace=0.3)\n",
-    "    plt.savefig(dir+\"LaserTimFreDis.\"+figureType,dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "plt.colorbar()\n",
-    "plt.savefig(dir+\"TimFreDistTotal.\"+figureType,dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.ticker as ticker\n",
-    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
-    "ax=plt.subplot()\n",
-    "\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "plt.plot(x,y,'k-')\n",
-    "\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.savefig(dir+\"FreDistTotal.\"+figureType,dpi=figureDPI)"
