--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "dir='D:\\\\doc\\\\data\\\\2060\\\\'\n",
-    "# dir='D:\\\\dataofpro\\\\'\n",
+    "dir=\"D:/Doc/ion/a1140p10/noali/\"\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -259,7 +259,7 @@
     "plt.plot(x1,y1,'k')\n",
     "sciforyax(ax)\n",
     "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
-    "plt.text(0.5*(max(x)-min(x)),0.6*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.text(0.5*(max(x)-min(x)),0.3*(max(y)-min(y)),'(1+2)-REMPI')\n",
     "#interpolation='spline16'\n",
     "plt.xlabel(\"Energy (eV)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
@@ -890,9 +890,9 @@
     "ax2=plt.subplot(2,1,2)\n",
     "DataPop =np.loadtxt(dir+\"p_exc_v.dat\")\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "x=DataPop[:,0]\n",
-    "y=DataPop[:,1]\n",
-    "z=DataPop[:,2]\n",
+    "x=DataPop[turnPoint:,0]\n",
+    "y=DataPop[turnPoint:,1]\n",
+    "z=DataPop[turnPoint:,2]\n",
     "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
     "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
     "zMesh=np.zeros((ny,nx))\n",
@@ -1008,9 +1008,9 @@
     "t = data[:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
-    "    'Translation': data[:,1],\n",
-    "    'Rotation':  data[:,2],\n",
-    "    'Vibration':  data[:,3],\n",
+    "    'Translation': data[turnPoint:,1],\n",
+    "    'Rotation':  data[turnPoint:,2],\n",
+    "    'Vibration':  data[turnPoint:,3],\n",
     "}\n",
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
@@ -1025,7 +1025,7 @@
     "data1=np.loadtxt(dir+'eneTRJVgro.dat')\n",
     "data2=np.loadtxt(dir+'eneTRJVexc.dat')\n",
     "data3=np.loadtxt(dir+'eneTRJVion.dat')\n",
-    "t = data[:,0]\n",
+    "t = data[turnPoint:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
     "    'Translation': data1[:,1]+data2[:,1]+data3[:,1],\n",
@@ -1628,7 +1628,6 @@
     "    for image_name in image_list:\n",
     "        frames.append(imageio.imread(image_name))\n",
     "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
-    "    \n",
     "    return\n",
     "    \n",
     "gif_name = \"P_VJ.gif\"\n",
@@ -1647,88 +1646,6 @@
     "myduration=0.3#eval(input(\"duration: s\"))\n",
     "compose_gif(image_list,dir+gif_name,myduration)\n",
     "print(\"Created\")    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.gridspec as gridspec\n",
-    "fig = plt.figure(tight_layout=True)\n",
-    "plt.figure(figsize=(8*5/2.54,6.5*5/2.54))\n",
-    "gs = gridspec.GridSpec(5, 5)\n",
-    "for i in range(0,5,1):\n",
-    "    for j in range(0,5,1):\n",
-    "        ax=plt.subplot(gs[i,j])\n",
-    "        plt.title(\"Spectrum ($\\\\phi_{1}=$\"+str(i*0.5) +\"$\\\\,\\\\pi, \\\\phi_{2}= $\"+str(j*0.5) +\n",
-    "                  \"$\\\\,\\\\pi$)\",fontsize=6)\n",
-    "        if i <= 1 and j <= 1  :\n",
-    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0\"+str((i)*5)+\"0\"+str((j)*5)+\".dat\")\n",
-    "        elif i <= 1 and j > 1 :\n",
-    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0\"+str((i)*5)+str((j)*5)+\".dat\")\n",
-    "        elif j <= 1 and i > 1 :\n",
-    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs\"+str((i)*5)+\"0\"+str((j)*5)+\".dat\")\n",
-    "        else:\n",
-    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs\"+str((i)*5)+str((j)*5)+\".dat\")\n",
-    "        x=data[:,0]\n",
-    "        y=data[:,1]\n",
-    "        z=data[:,2]\n",
-    "        plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "        plt.xlim(-20,20)\n",
-    "        plt.ylim(0.07,0.165)\n",
-    "        plt.colorbar(format=cbformat)\n",
-    "        plt.xlabel(\"Time(fs)\")\n",
-    "        plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.subplots_adjust(left=0.1,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
-    "plt.savefig(dir+\"LaserTimFreDisto.\"+figureType,dpi=figureDPI)\n",
-    "os.startfile(dir)\n",
-    "# ax=plt.subplot(gs[0,1])\n",
-    "# plt.title(\"Spectrum $\\\\phi_{1}= 0, \\\\phi_{2}= 0.5 \\\\pi $\")\n",
-    "# data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0005.dat\")\n",
-    "# x=data[:,0]\n",
-    "# y=data[:,1]\n",
-    "# z=data[:,2]\n",
-    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "# plt.colorbar(location = 'bottom',pad= 0.2)\n",
-    "# plt.xlabel(\"Time(fs)\")\n",
-    "# plt.ylabel(\"Instensity (a.u.)\")\n",
-    "# ax=plt.subplot(gs[0,2])\n",
-    "# plt.title(\"Spectrum $\\\\phi_{1}= 0, \\\\phi_{2}= 1.0 \\\\pi $\")\n",
-    "# data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0010.dat\")\n",
-    "# x=data[:,0]\n",
-    "# y=data[:,1]\n",
-    "# z=data[:,2]\n",
-    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "# plt.colorbar(location = 'bottom',pad= 0.2)\n",
-    "# plt.xlabel(\"Time(fs)\")\n",
-    "# plt.ylabel(\"Instensity (a.u.)\")\n",
-    "# ax=plt.subplot(gs[0,3])\n",
-    "# ax=plt.subplot(gs[1,0])\n",
-    "# ax=plt.subplot(gs[1,1])\n",
-    "# ax=plt.subplot(gs[1,2])\n",
-    "# ax=plt.subplot(gs[1,3])\n",
-    "# ax=plt.subplot(gs[2,0])\n",
-    "# ax=plt.subplot(gs[2,1])\n",
-    "# ax=plt.subplot(gs[2,2])\n",
-    "# ax=plt.subplot(gs[2,3])\n",
-    "# ax=plt.subplot(gs[3,0])\n",
-    "# ax=plt.subplot(gs[3,1])\n",
-    "# ax=plt.subplot(gs[3,2])\n",
-    "# ax=plt.subplot(gs[3,3])\n"
    ]
   },
   {
@@ -1763,38 +1680,42 @@
     "    \n",
     "    #fig=plt.subplots(2,2)\n",
     "    #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
-    "    plt.subplot(2,2,1)\n",
+    "    ax=plt.subplot(2,2,1)\n",
     "    plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "    plt.title('(a)',loc='left')\n",
     "    plt.xlim(-11,11)\n",
     "    plt.ylim(-11,11)\n",
     "    plt.xlabel(\"$R$ (a.u.)\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    plt.colorbar()\n",
-    "    plt.subplot(2,2,2)\n",
+    "    setlabel(ax,\"(a)\")\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    \n",
+    "    ax=plt.subplot(2,2,2)\n",
     "    plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "    plt.title('(b)',loc='left')\n",
+    "    setlabel(ax,\"(b)\")\n",
+    "    plt.colorbar(format=cbformat)\n",
     "    plt.xlim(-11,11)\n",
     "    plt.ylim(-11,11)\n",
     "    plt.xlabel(\"$R$ (a.u.)\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    plt.colorbar()\n",
-    "    plt.subplot(2,2,3)\n",
+    "\n",
+    "    ax=plt.subplot(2,2,3)\n",
     "    plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "    plt.title('(c)',loc='left')\n",
-    "    plt.colorbar()\n",
+    "    setlabel(ax,\"(c)\")\n",
+    "    plt.colorbar(format=cbformat)\n",
     "    plt.xlim(-11,11)\n",
     "    plt.ylim(-11,11)\n",
     "    plt.xlabel(\"$R$ (a.u.)\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    plt.subplot(2,2,4)\n",
+    "    \n",
+    "    ax=plt.subplot(2,2,4)\n",
     "    plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
-    "    plt.title('(d)',loc='left')\n",
+    "    setlabel(ax,\"(a)\")\n",
+    "    plt.colorbar(format=cbformat)\n",
     "    plt.xlim(-11,11)\n",
     "    plt.ylim(-11,11)\n",
     "    plt.xlabel(\"$R$ (a.u.)\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
-    "    plt.colorbar()\n",
+    "    \n",
     "    plt.subplots_adjust(left=0.125,\n",
     "                        bottom=0.1, \n",
     "                        right=0.9, \n",
@@ -1839,9 +1760,8 @@
     "    plt.xlabel(\"$\\\\theta$ (degree)\")\n",
     "    plt.ylabel(\"Energy (a.u.)\")\n",
     "    plt.colorbar()\n",
-    "  \n",
     "    plt.savefig(dir+\"PAD\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "    plt.show()\n",
+    "    # plt.show()\n",
     " \n"
    ]
   },
@@ -1851,6 +1771,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gif_name = \"PAD.gif\"\n",
+    "fileList =os.listdir(dir+\"PAD\\\\\")\n",
+    "# print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PAD\\\\\"+str(fileList[i])\n",
+    "    if s[-5:]==\".jpeg\":\n",
+    "        image_list.append(s)\n",
+    "        \n",
+    "        \n",
+    "# print(image_list)\n",
+    "myduration=0.2\n",
+    "eval(input(\"duration: s\"))\n",
+    "compose_gif(image_list,dir+gif_name,myduration)\n",
+    "# import imageio\n",
+    "# with imageio.get_writer(dir+gif_name, mode='I') as writer:\n",
+    "#     for filename in image_list:\n",
+    "#         image = imageio.imread(filename)\n",
+    "#         writer.append_data(image)\n",
+    "# print(\"Created\")   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "gif_name = \"Wave.gif\"\n",
     "fileList =os.listdir(dir+\"wave\\\\\")\n",
     "print(fileList)\n",
@@ -1887,25 +1838,11 @@
     "ax.set_title(\"A line plot on a polar axis\", va='bottom')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.6 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -1919,12 +1856,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
