--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
-    "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(13)))\n",
+    "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "plt.title(\"Electrical field\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
@@ -200,7 +200,7 @@
    "source": [
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
-    "plt.figure(figsize=(cm_to_inch(8*3),cm_to_inch(6.5)))\n",
+    "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
     "ax=plt.subplot(1,3,1)\n",
     "setlabel(ax,\"(a)\")\n",
     "plt.title(\"Electrical field\")\n",
@@ -238,7 +238,7 @@
     "ax=plt.subplot(1,3,2)\n",
     "setlabel(ax,\"(b)\")\n",
     "plt.title(\"Spectrum\")\n",
-    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
@@ -576,11 +576,86 @@
     "                    hspace=0.22)\n",
     "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.gridspec as gridspec\n",
+    "fig = plt.figure(tight_layout=True)\n",
+    "plt.figure(figsize=(8*5/2.54,6.5*5/2.54))\n",
+    "gs = gridspec.GridSpec(5, 5)\n",
+    "for i in range(0,5,1):\n",
+    "    for j in range(0,5,1):\n",
+    "        ax=plt.subplot(gs[i,j])\n",
+    "        plt.title(\"Spectrum ($\\\\phi_{1}=$\"+str(i*0.5) +\"$\\\\,\\\\pi, \\\\phi_{2}= $\"+str(j*0.5) +\n",
+    "                  \"$\\\\,\\\\pi$)\",fontsize=6)\n",
+    "        if i <= 1 and j <= 1  :\n",
+    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0\"+str((i)*5)+\"0\"+str((j)*5)+\".dat\")\n",
+    "        elif i <= 1 and j > 1 :\n",
+    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0\"+str((i)*5)+str((j)*5)+\".dat\")\n",
+    "        elif j <= 1 and i > 1 :\n",
+    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs\"+str((i)*5)+\"0\"+str((j)*5)+\".dat\")\n",
+    "        else:\n",
+    "            data=np.loadtxt(dir+\"TFDTwoColorPhaseIs\"+str((i)*5)+str((j)*5)+\".dat\")\n",
+    "        x=data[:,0]\n",
+    "        y=data[:,1]\n",
+    "        z=data[:,2]\n",
+    "        plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "        plt.xlim(-20,20)\n",
+    "        plt.ylim(0.07,0.165)\n",
+    "        plt.colorbar(format=cbformat)\n",
+    "        plt.xlabel(\"Time(fs)\")\n",
+    "        plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"LaserTimFreDisto.\"+figureType,dpi=figureDPI)\n",
+    "os.startfile(dir)\n",
+    "# ax=plt.subplot(gs[0,1])\n",
+    "# plt.title(\"Spectrum $\\\\phi_{1}= 0, \\\\phi_{2}= 0.5 \\\\pi $\")\n",
+    "# data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0005.dat\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(location = 'bottom',pad= 0.2)\n",
+    "# plt.xlabel(\"Time(fs)\")\n",
+    "# plt.ylabel(\"Instensity (a.u.)\")\n",
+    "# ax=plt.subplot(gs[0,2])\n",
+    "# plt.title(\"Spectrum $\\\\phi_{1}= 0, \\\\phi_{2}= 1.0 \\\\pi $\")\n",
+    "# data=np.loadtxt(dir+\"TFDTwoColorPhaseIs0010.dat\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(location = 'bottom',pad= 0.2)\n",
+    "# plt.xlabel(\"Time(fs)\")\n",
+    "# plt.ylabel(\"Instensity (a.u.)\")\n",
+    "# ax=plt.subplot(gs[0,3])\n",
+    "# ax=plt.subplot(gs[1,0])\n",
+    "# ax=plt.subplot(gs[1,1])\n",
+    "# ax=plt.subplot(gs[1,2])\n",
+    "# ax=plt.subplot(gs[1,3])\n",
+    "# ax=plt.subplot(gs[2,0])\n",
+    "# ax=plt.subplot(gs[2,1])\n",
+    "# ax=plt.subplot(gs[2,2])\n",
+    "# ax=plt.subplot(gs[2,3])\n",
+    "# ax=plt.subplot(gs[3,0])\n",
+    "# ax=plt.subplot(gs[3,1])\n",
+    "# ax=plt.subplot(gs[3,2])\n",
+    "# ax=plt.subplot(gs[3,3])\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit (microsoft store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -594,12 +669,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
