--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -109,11 +109,11 @@
     "def sciformat(ax):\n",
     "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
     "    formatter.set_scientific(True)\n",
-    "    formatter.set_powerlimits((0,0))\n",
+    "    formatter.set_powerlimits((-1,1))\n",
     "    ax.yaxis.set_major_formatter(formatter)\n",
     "formatsci=ticker.ScalarFormatter(useMathText=True)\n",
     "formatsci.set_scientific(True)\n",
-    "formatsci.set_powerlimits((0,0))\n",
+    "formatsci.set_powerlimits((-1,1))\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
@@ -135,32 +135,39 @@
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
     "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
+    "\n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "plt.title(\"Electrical field\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
     "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
+    "y1=data[:,1]+data[:,2]+data[:,3]\n",
     "y=data[:,4]\n",
     "setlabel(ax,\"(b)\")\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
     "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
     "# plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciformat(ax)\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "if (max(y1)>10):\n",
+    "    plt.ylabel(\"Instensity (V/m)\")\n",
+    "else:\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
     "\n",
     "ax=plt.axes([0.1,0.55,0.35,0.35])\n",
-    "plt.plot(x1,y,'r--')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
-    "plt.title(\"Enevlope\")\n",
     "setlabel(ax,\"(a)\")\n",
+    "plt.plot(x1,y,'r--')\n",
+    "# ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciformat(ax)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "if (max(y1)>10):\n",
+    "    plt.ylabel(\"Instensity (V/m)\")\n",
+    "else:\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "plt.title(\"Enevlope\")\n",
+    "\n",
     "ax=plt.axes([0.55,0.1,0.35,0.35])\n",
     "setlabel(ax,\"(d)\")\n",
     "plt.title(\"Frequency  distribution\")\n",
@@ -169,7 +176,7 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(y,x,'k-')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciformat(ax)\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
     "\n",
@@ -185,8 +192,8 @@
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "\n",
+    "sciformat(ax)\n",
+    "sciformat(ax)\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
     "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
@@ -207,20 +214,19 @@
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
     "x1=data[:,0]\n",
-    "y1=data[:,1]\n",
-    "y2=data[:,2]\n",
-    "y3=data[:,3]\n",
+    "y1=data[:,1]+data[:,2]+data[:,3]\n",
     "y=data[:,4]\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
-    "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "plt.plot(x1,y1,'k-')#,x1,y,'b--')\n",
+    "sciformat(ax)\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "if (max(y1)>10):\n",
+    "    plt.ylabel(\"Instensity (V/m)\")\n",
+    "else:\n",
+    "    plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
     "plt.plot(x1,y,'r--')\n",
-    "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "# plt.title(\"Enevlope\")\n",
     "\n",
     "ax=plt.subplot(1,3,3)\n",
@@ -233,7 +239,7 @@
     "plt.plot(y,x,'k-')\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "sciformat(ax)\n",
     "\n",
     "ax=plt.subplot(1,3,2)\n",
     "setlabel(ax,\"(b)\")\n",
@@ -247,8 +253,7 @@
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
-    "ax.yaxis.set_major_formatter(formatsci)\n",
-    "\n",
+    "sciformat(ax)\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
     "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
