--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -123,8 +123,8 @@
    "outputs": [],
    "source": [
     "# dir='D:\\\\doc\\\\data\\\\ori\\\\test2\\\\'\n",
-    "# dir='D:\\\\dataofpro\\\\'\n",
-    "dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "# dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
