--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -158,7 +158,9 @@
    "outputs": [],
    "source": [
     "dir='D:\\\\doc\\\\data\\\\2060\\\\'\n",
-    "dir=\"D:\\\\doc\\\\data\\\\a1140p10\\\\ali\\\\\"\n",
+    "# \n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -972,7 +974,7 @@
     "population_by_continent = {\n",
     "        'Translation': data[:,1],\n",
     "        'Rotation':  data[:,2],\n",
-    "        'Vibration': data[:,3],\n",
+    "        'Potential': data[:,3],\n",
     "}\n",
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
@@ -990,7 +992,7 @@
     "population_by_continent = {\n",
     "    'Translation': data[:,1],\n",
     "    'Rotation':  data[:,2],\n",
-    "    'Vibration':  data[:,3],\n",
+    "    'Potential':  data[:,3],\n",
     "}\n",
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
@@ -1010,7 +1012,7 @@
     "population_by_continent = {\n",
     "    'Translation': data[:,1],\n",
     "    'Rotation':  data[:,2],\n",
-    "    'Vibration':  data[:,3],\n",
+    "    'Potential':  data[:,3],\n",
     "}\n",
     "# fig, ax = plt.subplots()\n",
     "plt.stackplot(t, population_by_continent.values(),\n",
@@ -1031,7 +1033,7 @@
     "population_by_continent = {\n",
     "    'Translation': data1[:,1]+data2[:,1]+data3[:,1],\n",
     "    'Rotation':  data1[:,2]+data2[:,2]+data3[:,2],\n",
-    "    'Vibration':  data1[:,3]+data2[:,3]+data3[:,3],\n",
+    "    'Potential':  data1[:,3]+data2[:,3]+data3[:,3],\n",
     "}\n",
     "ax4.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
@@ -1060,7 +1062,7 @@
     "population_by_continent = {\n",
     "    'Translation': data1[:,1]+data2[:,1]+data3[:,1],\n",
     "    'Rotation':  data1[:,2]+data2[:,2]+data3[:,2],\n",
-    "    'Vibration':  data1[:,3]+data2[:,3]+data3[:,3],\n",
+    "    'Potential':  data1[:,3]+data2[:,3]+data3[:,3],\n",
     "}\n",
     "fig, ax = plt.subplots()\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
